--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,14 @@
+title: Home
+baseurl: "" 
 url: "https://alanisamaharani.github.io/"
 
+sass: 
+  sass_dir: _sass
+  style: compressed
+
+theme: null
+
+plugin:
+- jekyll-feed
+- jekyll-sitemap
+- jekyll-seo-tag
